first user log on works

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             </div>
         </div>
         <div class="row" id="statusBox">
-            Status
+            <span id="statusSpan">Status</span>
         </div>
         <div class="row"> <!-- login area, shown first -->
             <div id="loginDiv" class="col-12 col-md-6">
